Feat/scrape performance (#46)
Reviewed-on: https://git.sreyardship.com/SREYardship/PlatformUp2Date/pulls/46
Co-authored-by: Jesper Jumziey Vesterberg <jumziey@gmail.com>
Co-committed-by: Jesper Jumziey Vesterberg <jumziey@gmail.com>